--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -59,12 +59,14 @@ table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    height: 10px;
 }
 
 td, th {
     border: 1px solid #dddddd;
     text-align: left;
-    padding: 8px;
+    padding: 2px;
+    height:10px;
 }
 
 tr:nth-child(even) {
